# stock-prediction

./: .gitignore  LICENSE  pyproject.toml  readme.md
configs/: .gitignore  app-config.example.yml
src/: __init__.py
src/data_process/: LSTMDataProcess.py  NNDataProcess.py  commonDataProcess.py
src/models/: LSTMAttentionModel.py  NNModel.py
src/predict/: predict_stock.py
src/train/: trainLSTMAttention.py  trainNN.py
src/utils/: __init__.py  chineseFont.py  getBasicInfo.py  getDaily.py  loadConfig.py  tsCodeUtils.py
src/visualize/: __init__.py  dailyVisual.py
tests/: __init__.py
tests/scripts/: run_tests.py
tests/test_utils/: __init__.py  test_getBasicInfo.py  test_getDaily.py  test_tsCodeUtils.py
tests/test_visualize/: test_dailyVisual.py
