[project]
name = "stock-prediction"
version = "0.1.0"
description = "Stock price prediction system using machine learning"
authors = [
    { name = "lin", email = "hvtga447@gmail.comw" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.0",
    "pandas==2.1.4",
    "scikit-learn==1.3.2",
    "matplotlib==3.8.0"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
